--- a/localisation/events_eth_english.yml
+++ b/localisation/events_eth_english.yml
@@ -1,6 +1,6 @@
 #####################################################################
 #																	#
-#					 Revenge of Prester John				  		#
+#					 The Lion of Judah      				  		#
 #																	#
 # 						  EVENT STRINGS 							#
 #																 	#
