--- a/localisation/focus_eth_l_english.yml
+++ b/localisation/focus_eth_l_english.yml
@@ -56,3 +56,21 @@ l_english:
  ETH_royal_wedding_desc:0 "Rumors spread in 1934 that the Ethiopian royal family, and the Japanese royal family would join together in marriage, but due to Italian pressure Japan backed out. If we can sway Japan in our favor again, then we may have a chance to "
  ETH_lion_roar:0 "The Lion of Judah"
  ETH_lion_roar_desc:0 "Invigorated by their foreign support, Ethiopia rallies again to remove the colonialists once and for all."
+ ETH_demand_summit:0 "Demand a Summit at the League of Nations"
+ ETH_demand_summit_desc:0 "Italy is broken, and we have endured, the League needs to step in and force their hand to end this conflict."
+ ETH_sea_apart:0 "An Ocean Apart"
+ ETH_sea_apart_desc:0 "Our Japanese brothers our separated by the Indian Ocean. The British islands should serve as a excellent cooridor for war material to flow between our two countries. If we were to take these lands from the colonialist, we could secure a route to Japan."
+ ETH_secure_seuz:0 "Secure the Seuz Canal"
+ ETH_secure_seuz_desc:0 "The Seuz Canal is a very important route for trade, and it will be even more important with the upcoming conflicts. This land is Africa's and we need to wrestle it free from the colonialists."
+ ETH_anti_colonial_dogma:0 "Anti-Colonial Dogma"
+ ETH_anti_colonial_dogma_desc:0 "Too long has Africa and the world been ruled and enslaved by colonialists, we need to defeat the colonists and set thesee people free. We will defeat them just like we defeated Italy."
+ ETH_reclaim_aksum:0 "Reclaim the Kingdom of Aksum"
+ ETH_reclaim_aksum_desc:0 "The Kingdom of Aksum spread from Ethiopia across the Red Sea into the Arabian Peninsula during it's height in the 6th Century. It was an important stop along the Spice Road, and a mighty kingdom. These lands are rightfully ours, and we shall bring them back into Ethiopian hands."
+ ETH_demand_french_somalia:0 "Demand French Somolia"
+ ETH_demand_french_somalia_desc:0 "The French are no better than the British or the Italians. They impose their laws and culture on the people of Africa. They have no rights to these lands."
+ ETH_demand_british_somalia:0 "Demand British Colonies"
+ ETH_demand_british_somalia_desc:0 "The British have been pillaging and conquering for far too long across the entire world. Their colonies must be returned to the people, and under direction of Ethiopia, be set to govern themselves."
+ ETH_death_to_saudis:0 "The Islamic Problem"
+ ETH_death_to_saudis_desc:0 "Islam, and those who follow it have been at odds with our people and way of life. Since the days of the Umayyad Caliphate and the Ayyubid Dynasty, they have been at odds with us. Now it our turn to strike back, and get revenge for everything they have done to our people."
+ ETH_demand_solomon_kingdom:0 "Return the Kingdom of Solomon"
+ ETH_demand_solomon_kingdom_desc:0 "Haile Selassie is the rightful heir to the Solomonic Kingdom, and we will return to the Holy Land and unite the Christian and Judaic peoples under one banner. All Hail Emperor Haile Selassie, King of Axum and all of it's land!"
