--- a/localisation/focus_eth_l_english.yml
+++ b/localisation/focus_eth_l_english.yml
@@ -37,19 +37,21 @@ l_english:
  ETH_plea_to_lon:0 "Plea to the League of Nations"
  ETH_plea_to_lon_desc:0 "Haile Selassie plead to the League of Nations in June 1936 for them to impose sanctions on Italy. " 
  ETH_ferenghi:0 "The Ferenghi"
- ETH_ferenghi_desc:0 "The 'Ferengi' or Foreigers were a group of military advisors, pilots, and Red Cross doctors who assisted Ethiopia during the war with Italy."
+ ETH_ferenghi_desc:0 "The 'Ferengi' or Foreigners were a group of military advisors, pilots, and Red Cross doctors who assisted Ethiopia during the war with Italy."
  ETH_german_equipment:0 "German Support"
- ETH_german_equipment_desc:0 "Following Italy's initial objections with Germany's Anschuluss, German supplied Ethopia with rifles and ammunition in hopes of weakening Italy."
+ ETH_german_equipment_desc:0 "Following Italy's initial objections with Germany's Anschluss, German supplied Ethiopia with rifles and ammunition in hopes of weakening Italy."
  ETH_german_design:0 "Copy German Designs"
  ETH_german_design_desc:0 "Using the guns Germany has supplied us, we are able to reverse engineer their designs"
  ETH_homeland_defense:0 "Defense of the Homeland"
- ETH_homeland_defense_desc:0 "We cannot allow Italy to take our soverign territory. We cannot rely on anyone but ourselves."
+ ETH_homeland_defense_desc:0 "We cannot allow Italy to take our sovereign territory. We cannot rely on anyone but ourselves."
  ETH_mountain_forts:0 "Secure the Mountains"
- ETH_mountain_forts_desc:0 "We must foritfy our positions on the mountains if we hope to hold out against Italy."
+ ETH_mountain_forts_desc:0 "We must fortify our positions on the mountains if we hope to hold out against Italy."
  ETH_capital_forts:0 "Secure the Capital"
  ETH_capital_forts_desc:0 "We will turn Addis Ababa into a fortress."
  ETH_hold_line:0 "Hold the Line"
  ETH_hold_line_desc:0 "We cannot take one step back, and must hold our ground against the Italian invaders. Reinforcing current trenches, and new practices to defend our ground will go a long way."
+ ETH_rain_iron:0 "Steel Rain"
+ ETH_rain_iron_desc:0 "Italian planes fill the sky and harass our troops. We must place anti-air defenses across the country to bring them down with steel rain!"
  ETH_japanese_assistance:0 "Japanese Assistance"
  ETH_japanese_assistance_desc:0 "We must make a plea to Japan to support Ethiopia in the time of our greatest need. Popular support in Japan is with us, now we need to convince their leaders to support us once again."
  ETH_royal_wedding:0 "A Royal Wedding"
@@ -59,14 +61,14 @@ l_english:
  ETH_demand_summit:0 "Demand a Summit at the League of Nations"
  ETH_demand_summit_desc:0 "Italy is broken, and we have endured, the League needs to step in and force their hand to end this conflict."
  ETH_sea_apart:0 "An Ocean Apart"
- ETH_sea_apart_desc:0 "Our Japanese brothers our separated by the Indian Ocean. The British islands should serve as a excellent cooridor for war material to flow between our two countries. If we were to take these lands from the colonialist, we could secure a route to Japan."
- ETH_secure_seuz:0 "Secure the Seuz Canal"
- ETH_secure_seuz_desc:0 "The Seuz Canal is a very important route for trade, and it will be even more important with the upcoming conflicts. This land is Africa's and we need to wrestle it free from the colonialists."
+ ETH_sea_apart_desc:0 "Our Japanese brothers our separated by the Indian Ocean. The British islands should serve as a excellent corridor for war material to flow between our two countries. If we were to take these lands from the colonialist, we could secure a route to Japan."
+ ETH_secure_seuz:0 "Secure the Suez Canal"
+ ETH_secure_seuz_desc:0 "The Suez Canal is a very important route for trade, and it will be even more important with the upcoming conflicts. This land is Africa's and we need to wrestle it free from the colonialists."
  ETH_anti_colonial_dogma:0 "Anti-Colonial Dogma"
- ETH_anti_colonial_dogma_desc:0 "Too long has Africa and the world been ruled and enslaved by colonialists, we need to defeat the colonists and set thesee people free. We will defeat them just like we defeated Italy."
+ ETH_anti_colonial_dogma_desc:0 "Too long has Africa and the world been ruled and enslaved by colonialists, we need to defeat the colonists and set these people free. We will defeat them just like we defeated Italy."
  ETH_reclaim_aksum:0 "Reclaim the Kingdom of Aksum"
  ETH_reclaim_aksum_desc:0 "The Kingdom of Aksum spread from Ethiopia across the Red Sea into the Arabian Peninsula during it's height in the 6th Century. It was an important stop along the Spice Road, and a mighty kingdom. These lands are rightfully ours, and we shall bring them back into Ethiopian hands."
- ETH_demand_french_somalia:0 "Demand French Somolia"
+ ETH_demand_french_somalia:0 "Demand French Somalia"
  ETH_demand_french_somalia_desc:0 "The French are no better than the British or the Italians. They impose their laws and culture on the people of Africa. They have no rights to these lands."
  ETH_demand_british_somalia:0 "Demand British Colonies"
  ETH_demand_british_somalia_desc:0 "The British have been pillaging and conquering for far too long across the entire world. Their colonies must be returned to the people, and under direction of Ethiopia, be set to govern themselves."
@@ -74,3 +76,27 @@ l_english:
  ETH_death_to_saudis_desc:0 "Islam, and those who follow it have been at odds with our people and way of life. Since the days of the Umayyad Caliphate and the Ayyubid Dynasty, they have been at odds with us. Now it our turn to strike back, and get revenge for everything they have done to our people."
  ETH_demand_solomon_kingdom:0 "Return the Kingdom of Solomon"
  ETH_demand_solomon_kingdom_desc:0 "Haile Selassie is the rightful heir to the Solomonic Kingdom, and we will return to the Holy Land and unite the Christian and Judaic peoples under one banner. All Hail Emperor Haile Selassie, King of Axum and all of it's land!"
+ ETH_red_sea_foucs:0 "Develop the Red Sea"
+ ETH_red_sea_foucs_desc:0 "The Red Sea is an important route for all trade, we must develop our ports on it if we ever plan to dominate the sea. Ethiopian ports were an important stop along the Silk Roads before moving further up the Red Sea. We must reclaim"
+ ETH_develop_eritrea:0 "Develop Eritrea"
+ ETH_develop_eritrea_desc:0 "The Italians did invest some money in the infrastructure in Eritrea, we can take their existing structures and continue to expand on them. Eritrea could serve as a major port, if we continue developing infrastructure and industrial projects."
+ ETH_develop_somalia:0 "Develop Somalia"
+ ETH_develop_somalia_desc:0 "We need to develop Somalia into a modern port, if we have any intention of securing our land against the colonialists."
+ ETH_fortify_eritrea:0 "Fortify Eritrea"
+ ETH_fortify_eritrea_desc:0 "If we learned anything from our war with Italy, it is that defenses are necessary to prevent invasion by foreign powers"
+ ETH_fortify_somalia:0 "Fortify Eritrea"
+ ETH_fortify_somalia_desc:0 "If we learned anything from our war with Italy, it is that defenses are necessary to prevent invasion by foreign powers"
+ ETH_modern_navy:0 "Develop a Modern Navy"
+ ETH_modern_navy_desc:0 "Now that we have secure and developed our ports, we can invest in ship designs based off other major nations. With the limited capabilities of our industry, we should invest all resources into Destroyers."
+ ETH_amphibious_operations:0 "Amphibious Operations"
+ ETH_amphibious_operations_desc:0 "Amphibious warfare will be required if we ever desire to leave Africa. We should invest resources into studying the role transport ships and supporting navy plays in a succesfuly beachhead."
+ ETH_battleship_primacy:0 "Battleship Primacy"
+ ETH_battleship_primacy_desc:0 "If we plan to contend with the other navies of the world we must develop battleship designs."
+ ETH_silk_road_test:0 "Rebuild the Silk Road"
+ ETH_silk_road_test_desc:0 "Ethiopia was an important route on the Silk Road, good came in through Aksum's ports, and through Ethiopia north through Africa. We need to build new infrastructure to allow us to move goods through our country, just like goods moved through Aksum."
+ ETH_steel_industry:0 "Steel Industry Improvements"
+ ETH_steel_industry_desc:0 "We need to continue to develop our steel industry if we plan of fielding a modern army and navy."
+ ETH_rare_metals:0 "Metal Industry"
+ ETH_rare_metals_desc:0 "With further investment into mining, we can uncover new deposits of metals necessary for advanced industry."
+ ETH_oil_industry:0 "Oil Industry"
+ ETH_oil_industry_desc:0 "A Modern Navy requires a steady source of oil, which we could develop through further investments."
